--- a/src/assets/scss/pages/_landing.scss
+++ b/src/assets/scss/pages/_landing.scss
@@ -90,7 +90,7 @@
 }
 
 .bg-overlay-pattern {
-    background-image: url("~@/assets/images/landing/bg-pattern.png");
+    background-image: url("~@/assets/images/login-background.jpg");
     background-color: transparent;
     background-position: center;
     background-size: cover;
